Added goal endpoints
